# ZeroJuice

./: README.md
ai/: .gitignore  README.md  camera_test.py  parking_slot_detection.py  roi_editor.py  slot_refs.npz  slots.json
app/: .gitignore  README.md
app/smart-parking/: .gitignore  App.tsx  app.json  eas.json  package-lock.json  package.json
be/: .gitignore  README.md
be/zerojuice/: .env.example  .gitignore  CHANGES.md  Dockerfile  README.md  build.gradle  settings.gradle
emb/orin/: .gitignore  README.md  mqtt_pose_publisher.py
emb/orin/src/orin_car_controller/: package.xml  setup.cfg  setup.py
emb/orin/src/orin_car_controller/launch/: detect_orincar.launch.py  keyboard_control.launch.py  motor_node.launch.py
emb/orin/src/orin_car_controller/src/orin_car_controller/: dc_motor_demo.py  detect_orincar.py  hardware.py  keyboard_control.py  motor_node.py  mqtt_pose_publisher_copy.py  servo_motor_demo.py
emb/pc/: .gitignore  README.md
emb/pc/src/: mqtt.py  test.py
emb/pc/src/rc_nav2_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
emb/pc/src/rc_nav2_bringup/config/: cartographer_2d.lua  nav2_params.yaml  simple_nav_through_poses.xml  simple_nav_to_pose_dubins.xml  simple_nav_to_pose_reeds.xml
emb/pc/src/rc_nav2_bringup/launch/: amcl.launch.py  bringup_all.launch.py  bringup_cartographer.launch.py  navigation.launch.py  rf2o.launch.py
emb/pc/src/rc_nav2_bringup/maps/: map (copy).pgm  map.pgm  map.yaml  map2.yaml  parking.pgm  parking.yaml  parking_A1.pgm  parking_A1.yaml  parking_A2.pgm  parking_A2.yaml  parking_B1.pgm  parking_B1.yaml  parking_B2.pgm  parking_B2.yaml  parking_C1.pgm  parking_C1.yaml  parking_C2.pgm  parking_C2.yaml  parkingtest.pgm  test.xcf  total.xcf
emb/pc/src/rc_nav2_bringup/rc_nav2_bringup/: mqtt_parking_flow.py
exec/: 01_빌드_배포_매뉴얼.md  02_외부서비스_정보.md  03_DB_덤프_최신본.md  04_시연_시나리오.md  README.md
frontend/: README.md
frontend/my-react-app/: .dockerignore  .eslintrc.json  .gitignore  dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/my-react-app/components/: LogoutButton.jsx  ZeroJuiceCctv.jsx  ZeroJuiceDashboard.jsx  ZeroJuiceLogin.jsx  ZeroJuiceSetting.jsx  ZeroJuiceTrafficlog.jsx  cctvModule.jsx
frontend/my-react-app/src/: cctvPage.css  cctvPage.jsx  dashboardPage.css  dashboardPage.jsx  global.css  loginPage.css  loginPage.jsx  main.jsx  (+4 more)
(+194 files in other folders)
